# kde_headsetcontrol_integration

./: .gitignore  CMakeLists.txt  README.md
kde_files/: 5.24.4.patch  apply_patch.sh
module/: BatteryDebug.qml  CMakeLists.txt  HeadsetControl.cpp  HeadsetControl.h  TestType.qml  headsetcontrol_plugin.cpp  headsetcontrol_plugin.h  qmldir.in
test_project/: CMakeLists.txt  main.cpp  main.qml
